--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bkg_gray">#24282F</color>
+    <color name="bkg_character_gray">#3C3E44</color>
+    <color name="t_gray">#9E9E9E</color>
+    <color name="bkg_status_red">#D63D2E</color>
+    <color name="bkg_status_green">#55CC44</color>
+    <color name="bkg_status_gray">#9E9E9E</color>
 </resources>
