--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -9,28 +9,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_rates_star_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
+        android:layout_height="match_parent"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/progress_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="6"
-        tools:listitem="@layout/item_characters" />
-
-    <ProgressBar
-        android:id="@+id/progress_view"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:padding="4dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_characters" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
