--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!--   Light -->
+    <color name="colorPrimary">#8BC34A</color>
+    <color name="colorPrimaryVariant">#4CAF50</color>
+    <color name="colorOnPrimary">#38733A</color>
+    <color name="colorSecondary">#00FFFD</color>
+    <color name="colorSecondaryVariant">#FF03DAC5</color>
+    <color name="colorOnSecondary">#01A595</color>
+
+    <!--  Black -->
+    <color name="blackThemeColorPrimary">#38733A</color>
+    <color name="blackThemeColorPrimaryVariant">#004203</color>
+    <color name="blackThemeColorOnPrimary">#000000</color>
+    <color name="blackThemeColorSecondary">#FF018786</color>
+    <color name="blackThemeColorSecondaryVariant">#004942</color>
+    <color name="blackThemeColorOnSecondary">#000000</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="toolbar_background">#018006</color>
+    <color name="main_background">#838383</color>
+    <color name="grey">#65676B</color>
 </resources>
+
+
